--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -11,7 +11,7 @@
 #   - dist/**/*.js
 #
 src_files:
-    - public/javascripts/**/*.js
+    - javascripts/compiled/lib/require-jquery.js
 
 # stylesheets
 #
@@ -32,7 +32,7 @@ stylesheets:
 # Default: ["helpers/**/*.js"]
 #
 # EXAMPLE:
-#
+
 # helpers:
 #   - helpers/**/*.js
 #
@@ -59,7 +59,7 @@ spec_files:
 #
 # src_dir: public
 #
-src_dir:
+src_dir: public
 
 # spec_dir
 #
