--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "development/wiki"]
 	path = development/wiki
 	url = git@github.com:trabian/hyperlocalcu-prototype.wiki.git
+[submodule "server/juggernaut"]
+	path = server/juggernaut
+	url = git://github.com/maccman/juggernaut.git
