--- a/config/assets.yml
+++ b/config/assets.yml
@@ -15,6 +15,7 @@ javascripts:
     - public/javascripts/compiled/vendor/*.js
     - public/javascripts/compiled/views/**/*.handlebars
     - public/javascripts/compiled/app/base.js
+    - public/javascripts/compiled/app/helpers/**/*.js
     - public/javascripts/compiled/app/lib/socket.js
     - public/javascripts/compiled/app/models/event.js
     - public/javascripts/compiled/app/models/event_factory.js
